tests/invalid/runtime/string_pad_end_empty_pad.pts
import Io;

function main() : void {
    string s = "x";
    Io.printLine(s.padEnd(3, ""));
}
